--- a/food.css
+++ b/food.css
@@ -4,6 +4,15 @@
     box-sizing: border-box;
 }
 
+.stick{
+    position: sticky;
+    top: 0;
+    padding: 5px;
+    border: 1px solid #6d716d;
+    background-color: rgb(21, 34, 34);
+    z-index: 10;
+}
+
 .header{
     width: 100%;
     height: 100vh;
@@ -12,7 +21,7 @@
     background-size: cover;
     border: 1px solid black;
     position: relative;
-    
+
 }
 
 .head{
@@ -62,6 +71,38 @@
     font-style:oblique;
     color: white;
 }
+
+@media (max-width: 1024px) {
+    .header {
+        height: auto;
+    }
+
+    .content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .h1, .h6 {
+        font-size: 40px;  
+        margin-left: 0;
+    }
+
+    .image {
+        width: 400px;
+        height: 400px;
+    }
+
+    .image1 .image:hover {
+        width: 250px;
+        height: 250px;
+    }
+
+    li button {
+        font-size: 18px;
+        padding: 18px;
+    }
+}
+
 
 li{
     display: inline;
